--- a/.github/workflows/environment.yml
+++ b/.github/workflows/environment.yml
@@ -1,24 +1,20 @@
 name: workflows
+
 on: [push]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up conda
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Set up Python 3.12.4
+        uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
-          miniforge-version: latest
-          use-mamba: true
-          mamba-version: "*"
-      - name: Activate conda environment
+          python-version: "3.12.4"
+      - name: Install dependencies with pip
         run: |
-          conda env create -f environment.yml
-          conda activate base
-      - name: Install dependencies
-        run: |
-          conda install flake8 pytest numpy pandas
+          python -m pip install --upgrade pip
+          pip install flake8 pytest numpy pandas
       - name: Lint with flake8
         run: |
           flake8 .
