--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-numpy
-pandas
-pyttsx3
-scikit-learn
-scipy
-re
-csv
-
-# Optional dependencies
-python>=3.6
+pandas==2.1.1
+scikit-learn==1.3.1
+numpy==1.26.0
+pyttsx3==2.90
+re==3.0.1
+warnings==0.1.1
